docs/paper-trades/v5/2026-04-30_report.md
# v5 Paper Trading Report -- 2026-04-30

## Summary

| Metric | Value |
|--------|-------|
| Engine | v5 multi-pool |
| Capital | Rs 10.00L |
| Regime | SIDEWAYS |
| **Net P&L** | **Rs -16,735 (-1.67%)** |
| Trades | 22 (L:22 S:0) |
| Win Rate | 14% |

## Trades

| # | Type | Pool | Stock | Entry | Exit | P&L | Reason |
|---|------|------|-------|-------|------|-----|--------|
| 1 | LONG | SWING | COCHINSHIP | 1773.80 | 1746.80 | Rs -297 | STOPLOSS |
| 2 | LONG | SWING | GODFRYPHLP | 2275.30 | 2246.50 | Rs -317 | STOPLOSS |
| 3 | LONG | SWING | ADANIENT | 2412.40 | 2358.80 | Rs -268 | STOPLOSS |
| 4 | LONG | SWING | VEDL | 773.60 | 289.50 | Rs -14,523 | STOPLOSS |
| 5 | LONG | SWING | IDEA | 10.29 | 10.11 | Rs -73 | STOPLOSS |
| 6 | LONG | SWING | LODHA | 912.70 | 897.70 | Rs -60 | STOPLOSS |
| 7 | LONG | SWING | GLENMARK | 2413.90 | 2405.70 | Rs -8 | STOPLOSS |
| 8 | LONG | SWING | KPITTECH | 740.05 | 746.80 | Rs +40 | STOPLOSS |
| 9 | LONG | SWING | LAURUSLABS | 1106.10 | 1089.00 | Rs -68 | STOPLOSS |
| 10 | LONG | SWING | CIPLA | 1317.60 | 1311.50 | Rs -18 | SIGNAL_FLIP |
| 11 | LONG | SWING | KOTAKBANK | 382.00 | 382.20 | Rs +2 | FLAT_FORCE_EXIT |
| 12 | LONG | SWING | ITC | 316.25 | 315.35 | Rs -53 | FLAT_FORCE_EXIT |
| 13 | LONG | SWING | TECHM | 1459.80 | 1472.20 | Rs +136 | STOPLOSS |
| 14 | LONG | INVESTMENT | IDEA | 10.29 | 10.12 | Rs -272 | STOPLOSS |
| 15 | LONG | INVESTMENT | LODHA | 912.70 | 901.35 | Rs -182 | STOPLOSS |
| 16 | LONG | INVESTMENT | MAZDOCK | 2769.70 | 2721.30 | Rs -194 | STOPLOSS |
| 17 | LONG | INVESTMENT | INDUSINDBK | 913.75 | 898.45 | Rs -184 | STOPLOSS |
| 18 | LONG | INVESTMENT | ABCAPITAL | 348.45 | 344.00 | Rs -134 | STOPLOSS |
| 19 | LONG | INVESTMENT | RELIANCE | 1425.40 | 1404.20 | Rs -106 | STOPLOSS |
| 20 | LONG | INVESTMENT | COALINDIA | 479.90 | 478.80 | Rs -21 | STOPLOSS |
| 21 | LONG | INVESTMENT | MCX | 2968.30 | 2934.50 | Rs -68 | SIGNAL_FLIP |
| 22 | LONG | INVESTMENT | BHARTIARTL | 1888.10 | 1865.00 | Rs -69 | STOPLOSS |