docs/paper-trades/v6/2026-04-30_report.md
# v5 Paper Trading Report -- 2026-04-30

## Summary

| Metric | Value |
|--------|-------|
| Engine | v5 multi-pool |
| Capital | Rs 10.00L |
| Regime | SIDEWAYS |
| **Net P&L** | **Rs -14,994 (-1.50%)** |
| Trades | 17 (L:17 S:0) |
| Win Rate | 24% |

## Trades

| # | Type | Pool | Stock | Entry | Exit | P&L | Reason |
|---|------|------|-------|-------|------|-----|--------|
| 1 | LONG | SWING | COCHINSHIP | 1773.80 | 1747.40 | Rs -290 | STOPLOSS |
| 2 | LONG | SWING | GODFRYPHLP | 2275.30 | 2246.70 | Rs -315 | STOPLOSS |
| 3 | LONG | SWING | MCX | 2898.00 | 2968.00 | Rs +420 | STOPLOSS |
| 4 | LONG | SWING | VEDL | 773.60 | 289.50 | Rs -14,039 | STOPLOSS |
| 5 | LONG | SWING | IDEA | 10.29 | 10.10 | Rs -148 | STOPLOSS |
| 6 | LONG | SWING | INDUSINDBK | 913.75 | 901.70 | Rs -72 | STOPLOSS |
| 7 | LONG | SWING | ABCAPITAL | 348.45 | 340.70 | Rs -155 | STOPLOSS |
| 8 | LONG | SWING | ITC | 316.25 | 315.10 | Rs -66 | SIGNAL_FLIP |
| 9 | LONG | SWING | LODHA | 912.70 | 897.70 | Rs -150 | STOPLOSS |
| 10 | LONG | SWING | GLENMARK | 2413.90 | 2405.70 | Rs -25 | STOPLOSS |
| 11 | LONG | SWING | BHARTIARTL | 1888.10 | 1865.00 | Rs -231 | STOPLOSS |
| 12 | LONG | SWING | SUNPHARMA | 1778.70 | 1768.30 | Rs -83 | SIGNAL_FLIP |
| 13 | LONG | SWING | CIPLA | 1317.60 | 1312.70 | Rs -49 | SIGNAL_FLIP |
| 14 | LONG | SWING | LAURUSLABS | 1106.10 | 1098.00 | Rs -89 | SIGNAL_FLIP |
| 15 | LONG | SWING | KPITTECH | 740.05 | 746.80 | Rs +155 | STOPLOSS |
| 16 | LONG | SWING | KOTAKBANK | 382.00 | 382.20 | Rs +6 | FLAT_FORCE_EXIT |
| 17 | LONG | SWING | TECHM | 1459.80 | 1472.20 | Rs +136 | STOPLOSS |